--- a/trsthadingyut.html
+++ b/trsthadingyut.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<h1>How to celebrate Thadingyut Festival<br>
-		<img src="thadingyut_1.png" alt="Main image" style="width:500px; height:150px;">
+		<img src="images/thadingyut_1.png" alt="Main image" style="width:500px; height:150px;">
 	</h1>
 
 	<p>During Thadingyut, pagodas and homes through the country are decorated
@@ -36,18 +36,18 @@ night. Out on the streets, meanwhile, some people light fireworks or
 launch small hot-air balloons, which silently ascend and drift across
 the sky before burning out.</p>
 <div style="width: 20%;">
-	<img src="thadingyut_2.png" alt="Main image"><br>
-    <img src="Thadingyut_3.png" alt="Main image"><br>
-    <img src="Thadingyut_4.png" alt="Main image">
+	<img src="images/thadingyut_2.png" alt="Main image"><br>
+    <img src="images/thadingyut_3.png" alt="Main image"><br>
+    <img src="images/thadingyut_4.png" alt="Main image">
 </div>
 <div style="width: 38%; margin-left: 20px;">
 	<h2>Dawei Alm Bowl Floating Festival</h2>
-	<img src="download.png" alt="Main image" style="width:500px; height:250px;">
+	<img src="images/download.png" alt="Main image" style="width:500px; height:250px;">
 	<p>This festival is unique to Dawei and held on the full moon day.The residents would go around the town and ask for donations on the eve of the Thadingyut.Then they float the alms bowls on the river. This year’s festival will be held small-scale.</p>
 </div>
 <div style="width: 38%; margin-left: 20px;">
 	<h2>Kyaukse Elephant Dancing Festival</h2>
-	<img src="Kyaukse.png" alt="Main image" style="width:500px; height:250px;">
+	<img src="images/Kyaukse.png" alt="Main image" style="width:500px; height:250px;">
 	<p>The annual festival takes place in Kyaukse, Mandalay Region, the day before the full moon day of Thadingyut for over two days.</p>
 </div>
 </body>
