--- a/trsthadingyut.html
+++ b/trsthadingyut.html
@@ -47,7 +47,7 @@ the sky before burning out.</p>
 </div>
 <div style="width: 38%; margin-left: 20px;">
 	<h2>Kyaukse Elephant Dancing Festival</h2>
-	<img src="images/Kyaukse.png" alt="Main image" style="width:500px; height:250px;">
+	<img src="images/kyaukse.png" alt="Main image" style="width:500px; height:250px;">
 	<p>The annual festival takes place in Kyaukse, Mandalay Region, the day before the full moon day of Thadingyut for over two days.</p>
 </div>
 </body>
